Solved collapsable elements

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -156,6 +156,8 @@ button {
 
 .modal-subtitle {
   font-weight: 800;
+  max-height: 24px;
+
 }
 
 #exampleModalLabel {
